example2[Routing]/virtualService.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-service
  namespace: test-ns
spec:
  hosts:      
    - "*"
  gateways:
    - web-gateway
  http:
    - match:
      - uri:  
          prefix: "/microservice1"
      rewrite:
          uri: /
      route: 
      - destination:
          host: web-service
          subset: v1
    - match:
      - uri :
          prefix: "/microservice2"
      rewrite:
          uri: /
      route:
      - destination:
          host: web-service
          subset: v1
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-service
  namespace: istio-demo
spec:
  host: web-service
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
